Ran whole Bible through summarization pipeline

--- a/bible_summary.ipynb
+++ b/bible_summary.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "2dcc4fe0-1757-46e1-9d5d-85b1d0025569",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "30a78780-f687-4f21-9257-3357b48d0c3a",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "261b36b6-9fa8-435c-adf4-edf34471e0ce",
    "metadata": {},
    "outputs": [],
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "e282b1e5-8dcc-4baa-bb1d-fda0c3425846",
    "metadata": {},
    "outputs": [],
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "86461813-ab89-40cf-a3f1-9d2242bce30b",
    "metadata": {},
    "outputs": [],
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "401c0d1e-d90e-46c5-8fd3-c87667fc7ed5",
    "metadata": {},
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "c90f71c2-e5b6-4658-9287-0286cc5282ee",
    "metadata": {},
    "outputs": [],
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "2180c1f5-b636-41b1-a234-dcbee4c4d5be",
    "metadata": {},
    "outputs": [],
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "47b12987-563d-4375-81f4-1373ae154d67",
    "metadata": {},
    "outputs": [],
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "dc312520-90f5-4052-a824-557e03741a22",
    "metadata": {},
    "outputs": [],
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "909010d2-16fe-4aa5-a221-25736de195f5",
    "metadata": {},
    "outputs": [],
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 12,
    "id": "e72d4de0-17db-45ac-ab2a-a0b1a23e5800",
    "metadata": {},
    "outputs": [],
@@ -822,6 +822,36 @@
    ],
    "source": [
     "printing(bible_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "bc04cddc-3669-49ba-9247-56d4301b3e5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\MyStuff\\Applications\\Productivity\\Programming\\Python\\jupyter-env-313\\Lib\\site-packages\\huggingface_hub\\file_download.py:143: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\lydp7\\.cache\\huggingface\\hub\\models--sshleifer--distilbart-cnn-12-6. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
+      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
+      "  warnings.warn(message)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "' Noah begat three sons, Shem, Ham, and Japheth:\\xa0and Noah was five hundred years old when the flood of waters was upon the earth . Noah went into the ark with his sons, his wife, and his sons\\' wives with him . Afterward he vowed a vow, saying, \\'If God will be with me,  then shall the LORD be my God\\' Joseph was brought down to Egypt; and Potiphar, an officer of Pharaoh, captain of the guard, an Egyptian, bought him of the hands of the Ishmeelites . He shaved himself, and changed his raiment, and came in unto Pharaoh . And, behold, seven thin ears of corn came up upon one stalk, rank and good, and devoured the seven rank and full ears . So Joseph said, \"God forbid that I should  \"To obey is better than sacrifice, and to hearken than the fat of rams,\" says Abraham Abrahams son-in-law Sarah Abrahams daughter-to-son-of-law . Delilah made him shave off seven locks of his head, and she began to afflict him daily with her words . One of the sons of Ahimlech named Abiathar escaped, but David stooped with his face to the earth, and bowed himself . Ahab spake unto Naboth, saying, Give me thy vineyard for money; or else, if it please thee, I will give thee a better vineyard than it . Jezebel his wife said, Dost thou now govern the kingdom of Israel? She wrote letters in Ahab\\'s name, sealed them with his seal, and sent the letters to the elders and to the nobles that were in his city dwelling with Naboth .  A Psalm of David was written by David David, the chief Musician of the Bible . Shiggaion of David is a Psalm for the people who put their trust in thee and defend them . The Psalm contains a list of Psalms from the Bible, which includes Psalms about God and his people . It is said to be one of the most popular versions of the Psalms in the world . For example, no mention will be made to coral or pearls . No mention also made to pearls or coral . Job: God will not cast away a perfect man, neither will he help evil doers . Zophar the Naamathite said, \"I have heard the check of my reproach, and the spirit of my understanding causeth me to answer\" He said: \"He has destroyed me on every side  Jeremiah prophesied in the name of the LORD, saying, This house shall be like Shiloh, and this city shall be desolate without an inhabitant . Jeremiah bought the field of Hanameel my uncle\\'s son, and weighed him the money, even seventeen shekels of silver . Daniel purposed in his heart that he would not defile himself with the meat . Daniel had understanding in all visions and dreams . God gave them knowledge and skill in all learning and wisdom . At the end of ten days their countenances appeared fairer and fatter in flesh than all the children which did eat the portion of the King\\'s meat . Zechariah was angry with the people who refused to listen to the law . He said: Execute true judgment, and shew mercy and compassions every man to his brother . But he that taketh warning shall deliver his soul  Pilate was willing to release Jesus, but he delivered Jesus to their will . Two malefactors, one on the right hand and the other on the left, led with him to be put to death . Lazarus had lain in the grave four days already when Jesus came to Bethany . Martha met him, but Mary sat still in the house; she went to the grave to weep there . Caiaphas, being the high priest that same year said  Jesus walked no more openly among the Jews; but went to a country near to the wilderness, into Ephraim . Simon Peter asked Jesus to wash his feet, but said he would never wash his hands and his head . '"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summarization_pipeline_consolidation(bible_text)"
    ]
   },
   {
