--- a/bible_summary.ipynb
+++ b/bible_summary.ipynb
@@ -16,19 +16,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "2dcc4fe0-1757-46e1-9d5d-85b1d0025569",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\MyStuff\\Applications\\Productivity\\Programming\\Python\\jupyter-env-313\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import ebooklib\n",
@@ -44,6 +35,7 @@
     "import math\n",
     "import re\n",
     "import warnings\n",
+    "import requests\n",
     "\n",
     "logging.set_verbosity_error()"
    ]
@@ -742,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "e72d4de0-17db-45ac-ab2a-a0b1a23e5800",
    "metadata": {},
    "outputs": [],
@@ -761,7 +753,9 @@
     "    'Revelation'\n",
     "]\n",
     "\n",
-    "bible_text = '\\n'.join(get_book_text(book, bible) for book in (old_testament_books + new_testament_books))"
+    "all_books = old_testament_books + new_testament_books\n",
+    "\n",
+    "bible_text = '\\n'.join(get_book_text(book, bible) for book in all_books)"
    ]
   },
   {
@@ -852,6 +846,506 @@
    ],
    "source": [
     "summarization_pipeline_consolidation(bible_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "5c7f18ce-b3bd-4cd1-8b46-262f1ff734ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Genesis:\n",
+      "  jacob: 0.2118\n",
+      "  joseph: 0.2064\n",
+      "  land: 0.1669\n",
+      "  abraham: 0.1628\n",
+      "  father: 0.1561\n",
+      "\n",
+      "Exodus:\n",
+      "  moses: 0.3317\n",
+      "  lord: 0.2877\n",
+      "  aaron: 0.1809\n",
+      "  pharaoh: 0.1750\n",
+      "  israel: 0.1482\n",
+      "\n",
+      "Leviticus:\n",
+      "  offering: 0.3312\n",
+      "  lord: 0.2442\n",
+      "  priest: 0.2329\n",
+      "  unclean: 0.1550\n",
+      "  aaron: 0.1374\n",
+      "\n",
+      "Numbers:\n",
+      "  lord: 0.2469\n",
+      "  offering: 0.2439\n",
+      "  moses: 0.2308\n",
+      "  israel: 0.1785\n",
+      "  children: 0.1733\n",
+      "\n",
+      "Deuteronomy:\n",
+      "  lord: 0.4679\n",
+      "  lord god: 0.3581\n",
+      "  god: 0.2896\n",
+      "  land: 0.2021\n",
+      "  people: 0.0960\n",
+      "\n",
+      "Joshua:\n",
+      "  joshua: 0.4302\n",
+      "  lord: 0.2241\n",
+      "  children: 0.2035\n",
+      "  israel: 0.1898\n",
+      "  suburbs: 0.1654\n",
+      "\n",
+      "Judges:\n",
+      "  israel: 0.2737\n",
+      "  lord: 0.2176\n",
+      "  gideon: 0.1963\n",
+      "  samson: 0.1741\n",
+      "  children: 0.1698\n",
+      "\n",
+      "Ruth:\n",
+      "  naomi: 0.3761\n",
+      "  boaz: 0.2854\n",
+      "  ruth: 0.1956\n",
+      "  kinsman: 0.1855\n",
+      "  mother law: 0.1355\n",
+      "\n",
+      "1 Samuel:\n",
+      "  saul: 0.5958\n",
+      "  david: 0.3444\n",
+      "  samuel: 0.2628\n",
+      "  lord: 0.2421\n",
+      "  philistines: 0.1741\n",
+      "\n",
+      "2 Samuel:\n",
+      "  david: 0.4374\n",
+      "  king: 0.3305\n",
+      "  absalom: 0.2898\n",
+      "  joab: 0.2627\n",
+      "  lord: 0.1758\n",
+      "\n",
+      "1 Kings:\n",
+      "  king: 0.3290\n",
+      "  solomon: 0.3193\n",
+      "  lord: 0.2607\n",
+      "  israel: 0.2235\n",
+      "  house: 0.1736\n",
+      "\n",
+      "2 Kings:\n",
+      "  king: 0.3842\n",
+      "  lord: 0.2607\n",
+      "  elisha: 0.1858\n",
+      "  israel: 0.1778\n",
+      "  son: 0.1343\n",
+      "\n",
+      "1 Chronicles:\n",
+      "  sons: 0.3653\n",
+      "  son: 0.3150\n",
+      "  david: 0.3056\n",
+      "  begat: 0.1743\n",
+      "  lord: 0.1679\n",
+      "\n",
+      "2 Chronicles:\n",
+      "  lord: 0.3317\n",
+      "  king: 0.2847\n",
+      "  judah: 0.2096\n",
+      "  israel: 0.1968\n",
+      "  house: 0.1948\n",
+      "\n",
+      "Ezra:\n",
+      "  children: 0.2587\n",
+      "  god: 0.1970\n",
+      "  king: 0.1874\n",
+      "  house: 0.1558\n",
+      "  jerusalem: 0.1508\n",
+      "\n",
+      "Nehemiah:\n",
+      "  children: 0.2256\n",
+      "  son: 0.2213\n",
+      "  repaired: 0.1943\n",
+      "  levites: 0.1737\n",
+      "  god: 0.1316\n",
+      "\n",
+      "Esther:\n",
+      "  king: 0.4077\n",
+      "  esther: 0.3779\n",
+      "  haman: 0.3576\n",
+      "  mordecai: 0.3312\n",
+      "  ahasuerus: 0.1656\n",
+      "\n",
+      "Job:\n",
+      "  job: 0.2920\n",
+      "  god: 0.1748\n",
+      "  man: 0.1475\n",
+      "  almighty: 0.1223\n",
+      "  earth: 0.0895\n",
+      "\n",
+      "Psalms:\n",
+      "  lord: 0.4809\n",
+      "  god: 0.2551\n",
+      "  psalm: 0.1699\n",
+      "  praise: 0.1686\n",
+      "  selah: 0.1526\n",
+      "\n",
+      "Proverbs:\n",
+      "  man: 0.2508\n",
+      "  wicked: 0.1969\n",
+      "  fool: 0.1532\n",
+      "  wise: 0.1342\n",
+      "  wisdom: 0.1331\n",
+      "\n",
+      "Ecclesiastes:\n",
+      "  vanity: 0.2313\n",
+      "  man: 0.1843\n",
+      "  sun: 0.1566\n",
+      "  wisdom: 0.1444\n",
+      "  heart: 0.1345\n",
+      "\n",
+      "Song of Solomon:\n",
+      "  beloved: 0.2237\n",
+      "  love: 0.1334\n",
+      "  daughters jerusalem: 0.1141\n",
+      "  spouse: 0.1074\n",
+      "  fair: 0.0964\n",
+      "\n",
+      "Isaiah:\n",
+      "  lord: 0.4383\n",
+      "  people: 0.1434\n",
+      "  god: 0.1180\n",
+      "  lord hosts: 0.1106\n",
+      "  hosts: 0.1104\n",
+      "\n",
+      "Jeremiah:\n",
+      "  lord: 0.4422\n",
+      "  jeremiah: 0.2301\n",
+      "  babylon: 0.2199\n",
+      "  king: 0.1808\n",
+      "  judah: 0.1697\n",
+      "\n",
+      "Lamentations:\n",
+      "  lord: 0.1954\n",
+      "  zion: 0.1402\n",
+      "  daughter: 0.1301\n",
+      "  daughter zion: 0.0949\n",
+      "  enemy: 0.0768\n",
+      "\n",
+      "Ezekiel:\n",
+      "  lord: 0.3181\n",
+      "  lord god: 0.2168\n",
+      "  god: 0.1781\n",
+      "  israel: 0.1668\n",
+      "  son man: 0.1561\n",
+      "\n",
+      "Daniel:\n",
+      "  king: 0.3533\n",
+      "  daniel: 0.3404\n",
+      "  nebuchadnezzar: 0.1398\n",
+      "  interpretation: 0.1223\n",
+      "  kingdom: 0.1174\n",
+      "\n",
+      "Hosea:\n",
+      "  ephraim: 0.2520\n",
+      "  israel: 0.1850\n",
+      "  lord: 0.1597\n",
+      "  god: 0.0975\n",
+      "  whoredom: 0.0822\n",
+      "\n",
+      "Joel:\n",
+      "  lord: 0.1855\n",
+      "  people: 0.0902\n",
+      "  zion: 0.0866\n",
+      "  land: 0.0790\n",
+      "  children: 0.0667\n",
+      "\n",
+      "Amos:\n",
+      "  lord: 0.3055\n",
+      "  lord god: 0.1374\n",
+      "  israel: 0.1334\n",
+      "  lord transgressions: 0.1204\n",
+      "  turn punishment: 0.1204\n",
+      "\n",
+      "Obadiah:\n",
+      "  esau: 0.1951\n",
+      "  mount esau: 0.1733\n",
+      "  shouldest: 0.1283\n",
+      "  day: 0.1242\n",
+      "  possess: 0.1168\n",
+      "\n",
+      "Jonah:\n",
+      "  jonah: 0.4486\n",
+      "  nineveh: 0.1707\n",
+      "  lord: 0.1701\n",
+      "  gourd: 0.1369\n",
+      "  god: 0.1001\n",
+      "\n",
+      "Micah:\n",
+      "  lord: 0.2022\n",
+      "  people: 0.1048\n",
+      "  zion: 0.0954\n",
+      "  jacob: 0.0886\n",
+      "  house: 0.0760\n",
+      "\n",
+      "Nahum:\n",
+      "  lord: 0.0950\n",
+      "  cankerworm: 0.0835\n",
+      "  nineveh: 0.0636\n",
+      "  lord revengeth: 0.0612\n",
+      "  revengeth: 0.0612\n",
+      "\n",
+      "Habakkuk:\n",
+      "  lord: 0.0889\n",
+      "  violence: 0.0805\n",
+      "  selah: 0.0727\n",
+      "  didst: 0.0713\n",
+      "  woe: 0.0643\n",
+      "\n",
+      "Zephaniah:\n",
+      "  lord: 0.2250\n",
+      "  day: 0.1390\n",
+      "  desolation: 0.0949\n",
+      "  day lord: 0.0810\n",
+      "  people: 0.0606\n",
+      "\n",
+      "Haggai:\n",
+      "  lord: 0.2299\n",
+      "  haggai: 0.2252\n",
+      "  lord hosts: 0.2075\n",
+      "  hosts: 0.1803\n",
+      "  zerubbabel: 0.1456\n",
+      "\n",
+      "Zechariah:\n",
+      "  lord: 0.3665\n",
+      "  lord hosts: 0.3109\n",
+      "  hosts: 0.2702\n",
+      "  jerusalem: 0.1576\n",
+      "  angel talked: 0.1088\n",
+      "\n",
+      "Malachi:\n",
+      "  lord hosts: 0.3187\n",
+      "  lord: 0.2883\n",
+      "  hosts: 0.2770\n",
+      "  treacherously: 0.0853\n",
+      "  offering: 0.0702\n",
+      "\n",
+      "Matthew:\n",
+      "  jesus: 0.3627\n",
+      "  disciples: 0.2556\n",
+      "  man: 0.1547\n",
+      "  kingdom heaven: 0.1392\n",
+      "  pharisees: 0.1093\n",
+      "\n",
+      "Mark:\n",
+      "  jesus: 0.3029\n",
+      "  disciples: 0.2452\n",
+      "  man: 0.1610\n",
+      "  john: 0.1329\n",
+      "  scribes: 0.0964\n",
+      "\n",
+      "Luke:\n",
+      "  jesus: 0.2246\n",
+      "  son: 0.1894\n",
+      "  man: 0.1750\n",
+      "  god: 0.1527\n",
+      "  lord: 0.1344\n",
+      "\n",
+      "John:\n",
+      "  jesus: 0.5339\n",
+      "  disciples: 0.2314\n",
+      "  father: 0.1753\n",
+      "  jews: 0.1641\n",
+      "  jesus answered: 0.1611\n",
+      "\n",
+      "Acts:\n",
+      "  paul: 0.3288\n",
+      "  god: 0.1847\n",
+      "  peter: 0.1787\n",
+      "  jews: 0.1606\n",
+      "  jesus: 0.1330\n",
+      "\n",
+      "Romans:\n",
+      "  god: 0.3314\n",
+      "  christ: 0.2515\n",
+      "  law: 0.2047\n",
+      "  faith: 0.1443\n",
+      "  jesus: 0.1406\n",
+      "\n",
+      "1 Corinthians:\n",
+      "  christ: 0.2711\n",
+      "  god: 0.2269\n",
+      "  man: 0.1936\n",
+      "  things: 0.1714\n",
+      "  lord: 0.1530\n",
+      "\n",
+      "2 Corinthians:\n",
+      "  christ: 0.2686\n",
+      "  god: 0.2219\n",
+      "  jesus: 0.1096\n",
+      "  glory: 0.1056\n",
+      "  perils: 0.1036\n",
+      "\n",
+      "Galatians:\n",
+      "  christ: 0.3125\n",
+      "  law: 0.1731\n",
+      "  faith: 0.1677\n",
+      "  god: 0.1358\n",
+      "  jesus: 0.1296\n",
+      "\n",
+      "Ephesians:\n",
+      "  christ: 0.3540\n",
+      "  jesus: 0.1616\n",
+      "  god: 0.1371\n",
+      "  lord: 0.1086\n",
+      "  jesus christ: 0.0942\n",
+      "\n",
+      "Philippians:\n",
+      "  christ: 0.3496\n",
+      "  jesus: 0.2024\n",
+      "  things: 0.1499\n",
+      "  god: 0.1142\n",
+      "  whatsoever things: 0.1104\n",
+      "\n",
+      "Colossians:\n",
+      "  christ: 0.2624\n",
+      "  god: 0.1199\n",
+      "  things: 0.1116\n",
+      "  laodicea: 0.0808\n",
+      "  jesus: 0.0807\n",
+      "\n",
+      "1 Thessalonians:\n",
+      "  god: 0.2249\n",
+      "  jesus: 0.1816\n",
+      "  lord: 0.1508\n",
+      "  christ: 0.1496\n",
+      "  lord jesus: 0.1334\n",
+      "\n",
+      "2 Thessalonians:\n",
+      "  christ: 0.1868\n",
+      "  lord jesus: 0.1794\n",
+      "  lord jesus christ: 0.1788\n",
+      "  jesus: 0.1724\n",
+      "  lord: 0.1703\n",
+      "\n",
+      "1 Timothy:\n",
+      "  faith: 0.1634\n",
+      "  godliness: 0.1458\n",
+      "  christ: 0.1376\n",
+      "  jesus: 0.1204\n",
+      "  good: 0.1186\n",
+      "\n",
+      "2 Timothy:\n",
+      "  christ: 0.1616\n",
+      "  jesus: 0.1508\n",
+      "  christ jesus: 0.1127\n",
+      "  lord: 0.1034\n",
+      "  god: 0.0872\n",
+      "\n",
+      "Titus:\n",
+      "  saviour: 0.0990\n",
+      "  sober: 0.0973\n",
+      "  god: 0.0955\n",
+      "  good: 0.0897\n",
+      "  things: 0.0871\n",
+      "\n",
+      "Philemon:\n",
+      "  jesus: 0.1615\n",
+      "  christ: 0.1615\n",
+      "  philemon: 0.1091\n",
+      "  prisoner jesus christ: 0.0993\n",
+      "  onesimus: 0.0993\n",
+      "\n",
+      "Hebrews:\n",
+      "  god: 0.1964\n",
+      "  faith: 0.1618\n",
+      "  things: 0.1235\n",
+      "  priest: 0.1197\n",
+      "  melchisedec: 0.1075\n",
+      "\n",
+      "James:\n",
+      "  faith: 0.1472\n",
+      "  faith works: 0.1385\n",
+      "  man: 0.1371\n",
+      "  brethren: 0.0949\n",
+      "  works: 0.0919\n",
+      "\n",
+      "1 Peter:\n",
+      "  god: 0.1918\n",
+      "  christ: 0.1865\n",
+      "  jesus: 0.0977\n",
+      "  jesus christ: 0.0815\n",
+      "  conversation: 0.0784\n",
+      "\n",
+      "2 Peter:\n",
+      "  jesus: 0.1034\n",
+      "  lord saviour: 0.0988\n",
+      "  lord: 0.0973\n",
+      "  jesus christ: 0.0937\n",
+      "  saviour jesus christ: 0.0919\n",
+      "\n",
+      "1 John:\n",
+      "  god: 0.2983\n",
+      "  love: 0.1930\n",
+      "  love god: 0.1444\n",
+      "  son: 0.1155\n",
+      "  born god: 0.1115\n",
+      "\n",
+      "2 John:\n",
+      "  god speed: 0.1396\n",
+      "  abideth doctrine: 0.1396\n",
+      "  abideth doctrine christ: 0.1396\n",
+      "  doctrine christ: 0.1270\n",
+      "  lady: 0.1270\n",
+      "\n",
+      "3 John:\n",
+      "  truth beloved: 0.1356\n",
+      "  truth: 0.1222\n",
+      "  church: 0.0974\n",
+      "  beloved: 0.0770\n",
+      "  record: 0.0713\n",
+      "\n",
+      "Jude:\n",
+      "  ungodly: 0.1614\n",
+      "  jesus christ: 0.0933\n",
+      "  jesus: 0.0915\n",
+      "  christ: 0.0915\n",
+      "  lord: 0.0723\n",
+      "\n",
+      "Revelation:\n",
+      "  angel: 0.1794\n",
+      "  god: 0.1703\n",
+      "  earth: 0.1670\n",
+      "  beast: 0.1403\n",
+      "  great: 0.1376\n"
+     ]
+    }
+   ],
+   "source": [
+    "# from https://gist.github.com/sebleier/554280?permalink_comment_id=3813988#gistcomment-3813988 \n",
+    "# english stopwords list wasn't cutting it for KJV\n",
+    "stopwords_list = requests.get(\"https://gist.githubusercontent.com/rg089/35e00abf8941d72d419224cfd5b5925d/raw/12d899b70156fd0041fa9778d657330b024b959c/stopwords.txt\").content\n",
+    "stopwords = list(set(stopwords_list.decode().splitlines())) + ['thy', 'thee', 'thine', 'shalt', 'ye', 'hath', 'hast', 'saith', 'doeth', 'art']\n",
+    "\n",
+    "vectorizer = TfidfVectorizer(ngram_range=(1, 3), stop_words=stopwords)\n",
+    "    \n",
+    "book_vectors = vectorizer.fit_transform([get_book_text(book, bible) for book in all_books])\n",
+    "feature_names = vectorizer.get_feature_names_out()\n",
+    "\n",
+    "# Find top 5 words for each book\n",
+    "for i, book in enumerate(all_books):\n",
+    "    # TF-IDF scores for current book\n",
+    "    book_tfidf = book_vectors[i].toarray().flatten()    \n",
+    "    # Indices of top 5 scores\n",
+    "    top_indices = book_tfidf.argsort()[-5:][::-1]    \n",
+    "    # Words and their scores\n",
+    "    top_words = [(feature_names[idx], book_tfidf[idx]) for idx in top_indices]\n",
+    "    \n",
+    "    print(f\"\\n{book}:\")\n",
+    "    for word, score in top_words:\n",
+    "        print(f\"  {word}: {score:.4f}\")"
    ]
   },
   {
