Added introductory content to bible_summary.ipynb and consolidation_comparison.ipynb.

--- a/bible_summary.ipynb
+++ b/bible_summary.ipynb
@@ -4,7 +4,58 @@
    "cell_type": "markdown",
    "id": "ee689ef3-e4d5-476f-a59c-77fa77d1ae20",
    "metadata": {},
-   "source": []
+   "source": [
+    "This notebook shows the effects of using the long-form text consolidation and summarization functions I made in the consolidation-comparison.ipynb notebook on the Bible. I've included the description of those techniques below for the sake of completeness. I did this purely out of curiosity; this is not meant to serve as any form of conclusive analysis.\n",
+    "\n",
+    "# Methods\n",
+    "\n",
+    "## TF-IDF\n",
+    "\n",
+    "Term frequency-inverse document frequency gives high weights to words that are present in a given document (term frequency), but rare across the entire corpus (inverse document frequency). I wanted to explore the utility of using this techinque for consolidating long texts. I used the follow process:\n",
+    "\n",
+    "1. Turn text into a list of sentences.\n",
+    "2. Create the sparse TF-IDF matrix from these sentences. Each sentence is a document, and the full collection of sentences is the corpus.\n",
+    "3. Pool the vectors in this matrix using either max or sum pooling.\n",
+    "    - Max pooling captures the maximum TF-IDF score for each word. Broadly speaking, this vector represents the text's most important topics.\n",
+    "    - Sum pooling sums all TF-IDF scores for each word. Broadly speaking, this vector represents the text's recurring themes.\n",
+    "5. Use MMR to select sentences based on their TF-IDF vectors.\n",
+    "\n",
+    "## Transformers\n",
+    "\n",
+    "This approach uses sentence transformers in fundamentally the same process as I used for TF-IDF consolidation.\n",
+    "\n",
+    "1. Chunk text into either sentences or fixed-size chunks.\n",
+    "2. Embed text chunks.\n",
+    "3. Mean pool embeddings.\n",
+    "4. Use MMR to select sentences based on their embeddings.\n",
+    "\n",
+    "NB: `transformers_consolidation()` contains options for length weighted mean pooling and semantic centrality pooling, which aren't implemented in this notebook, but were implemented in another notebook not in this repository. Length weighted mean pooling finds the average of the vectors weighted by the length of the sentence each vector represents. Semantic centrality pooling weights each embedding by its average cosine similarity to all other embeddings. \n",
+    "\n",
+    "## Hugging Face Summarization Pipeline\n",
+    "\n",
+    "The approach iteratively summarizes long-form text using Hugging Face's summarization pipeline. \n",
+    "\n",
+    "1. Determine token limit of summarization model.\n",
+    "2. Chunk text into pieces ~50% of model's token limit.\n",
+    "3. Summarize each chunk to 30-90% of its original length.\n",
+    "4. Concatentate chunks.\n",
+    "5. Repeat chunking and summarization process of concatenated text until concatenated text is within defined limits.\n",
+    "\n",
+    "NB: `summarization_pipeline_consolidation()` contains options for paragraph chunking and semantic chunking, which aren't implemented in this notebook. Where `semantic_chunking()` is implemnented, it uses LangChain's SemanticChunker (`from langchain_experimental.text_splitter import SemanticChunker`). \n",
+    "\n",
+    "# Observations\n",
+    "I haven't read through all the text in this notebook, but here are some of my more immediate observations.\n",
+    "\n",
+    "- TF-IDF consolidation with max pooling produced identical results for the whole Bible and the Old Testament.\n",
+    "- Transformers consolidation with chunk pooling produced very similar results for the whole Bible and the Old Testament. The only difference was a single sentence, \"And Araunah said unto David, Let my lord the king take and offer up what seemeth good unto him: behold, here be oxen for burnt sacrifice, and threshing instruments and other instruments of the oxen for wood,\" which is present in the consolidation for the whole Bible but not the Old Testament.\n",
+    "- Much of the text returned by `summarization_pipeline_consolidation()` is similar between the whole Bible and the Old Testament. The whole Bible summarization has several more sentences at the end, however.\n",
+    "\n",
+    "I expect that the previous three observations simply result from the fact that the Old Testament is a much larger portion of the Bible than the New Testament. Changing the MMR lambda value may produce different results.\n",
+    "\n",
+    "Part of the inspiration for this project was curiosity about what would happen if I tried to condense the Bible into a single, discourse coherent paragraph. However, the summarization pipeline results overall seem too noisy to be usable in any meaningful way. They're better for the individual books, espeically the shorter ones, but not for the full testaments and the whole Bible. Iteratively summarizing text like I did opens up too many opportunities for artifacts to appear, which they certainly did. I'm sure I'd get usable results if I used one of the big LLMs (ChatGPT, Claude, etc.) or did some careful model selection and parameter tuning. \n",
+    "\n",
+    "I first tried to use the pegasus-x-large model because it produced such good results in the consolidation_comparison.ipynb notebook before it devolved into repetition. I thought that, with some parameter tuning, it could give me what I was hoping for. However, running it locally on the entire Bible proved too resource intensive (i.e. it was taking too long and I got impatient), so I opted for sshleifer/distilbart-cnn-12-6, which produced sufficiently passable results in the other notebook."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -7883,6 +7934,14 @@
    "source": [
     "summarization_pipeline_consolidation(revelation)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53836217-54f7-4923-a181-3bba02a14c24",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
