--- a/consolidation_comparison.ipynb
+++ b/consolidation_comparison.ipynb
@@ -2,6 +2,50 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "fdb42454-8e3d-4cd3-99c7-9852ccd38421",
+   "metadata": {},
+   "source": [
+    "I asked ChatGPT to generate the `quantum_computing_essay.md` file solely for use with this project.\n",
+    "\n",
+    "# Methods\n",
+    "\n",
+    "## TF-IDF\n",
+    "\n",
+    "Term frequency-inverse document frequency gives high weights to words that are present in a given document (term frequency), but rare across the entire corpus (inverse document frequency). I wanted to explore the utility of using this techinque for consolidating long texts. I used the follow process:\n",
+    "\n",
+    "1. Turn text into a list of sentences.\n",
+    "2. Create the sparse TF-IDF matrix from these sentences. Each sentence is a document, and the full collection of sentences is the corpus.\n",
+    "3. Pool the vectors in this matrix using either max or sum pooling.\n",
+    "    - Max pooling captures the maximum TF-IDF score for each word. Broadly speaking, this vector represents the text's most important topics.\n",
+    "    - Sum pooling sums all TF-IDF scores for each word. Broadly speaking, this vector represents the text's recurring themes.\n",
+    "5. Use MMR to select sentences based on their TF-IDF vectors.\n",
+    "\n",
+    "## Transformers\n",
+    "\n",
+    "This approach uses sentence transformers in fundamentally the same process as I used for TF-IDF consolidation.\n",
+    "\n",
+    "1. Chunk text into either sentences or fixed-size chunks.\n",
+    "2. Embed text chunks.\n",
+    "3. Mean pool embeddings.\n",
+    "4. Use MMR to select sentences based on their embeddings.\n",
+    "\n",
+    "NB: `transformers_consolidation()` contains options for length weighted mean pooling and semantic centrality pooling, which aren't implemented in this notebook, but were implemented in another notebook not in this repository. Length weighted mean pooling finds the average of the vectors weighted by the length of the sentence each vector represents. Semantic centrality pooling weights each embedding by its average cosine similarity to all other embeddings. \n",
+    "\n",
+    "## Hugging Face Summarization Pipeline\n",
+    "\n",
+    "The approach iteratively summarizes long-form text using Hugging Face's summarization pipeline. \n",
+    "\n",
+    "1. Determine token limit of summarization model.\n",
+    "2. Chunk text into pieces ~50% of model's token limit.\n",
+    "3. Summarize each chunk to 30-90% of its original length.\n",
+    "4. Concatentate chunks.\n",
+    "5. Repeat chunking and summarization process of concatenated text until concatenated text is within defined limits.\n",
+    "\n",
+    "NB: `summarization_pipeline_consolidation()` contains options for paragraph chunking and semantic chunking, which aren't implemented in this notebook. Where `semantic_chunking()` is implemnented, it uses LangChain's SemanticChunker (`from langchain_experimental.text_splitter import SemanticChunker`). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "43fcab16-b00e-4054-86d1-7c6d7c1d875d",
    "metadata": {},
    "source": [
@@ -532,6 +576,7 @@
     "        warnings.warn('Invalid chunking method. Defaulting to sentence chunking.')\n",
     "        centroid_embeddings = sentence_embeddings\n",
     "\n",
+    "    # NB: len_weighted_mean_pooling() and semantic_centrality_weighting() are not implemented in this notebook\n",
     "    if pooling == 'mean':\n",
     "        doc_centroid = mean_pooling(centroid_embeddings)\n",
     "    elif pooling == 'len_weighted':\n",
