--- a/bible_summary.ipynb
+++ b/bible_summary.ipynb
@@ -197,9 +197,12 @@
     "    \n",
     "    Args:\n",
     "        text (str): Input text to chunk\n",
-    "        model_name (str): HuggingFace model name for tokenizer\n",
-    "        doc_size (int, optional): Maximum tokens per chunk. If None, uses model's max length minus 50\n",
-    "        full_sentences (bool): If True, preserves sentence boundaries when possible\n",
+    "        model_name (str): HuggingFace model name for tokenizer. \n",
+    "            Defaults to 'sentence-transformers/all-MiniLM-L6-v2'.\n",
+    "        doc_size (int | None): Maximum tokens per chunk. If None, uses model's max \n",
+    "            length with a buffer for safety. Defaults to None.\n",
+    "        full_sentences (bool): If True, preserves sentence boundaries when possible.\n",
+    "            Defaults to True.\n",
     "       \n",
     "    Returns:\n",
     "        list[str]: List of text chunks, each within the token limit\n",
@@ -276,9 +279,12 @@
     "        model_name (str): HuggingFace model identifier\n",
     "       \n",
     "    Returns:\n",
-    "        tuple: (max_length, source_attribute)\n",
+    "        tuple[int, str]: A tuple containing:\n",
     "            - max_length (int): Maximum sequence length\n",
     "            - source_attribute (str): Which attribute was used to determine the length\n",
+    "            \n",
+    "    Raises:\n",
+    "        Warning: If model cannot be loaded or no reliable max length found\n",
     "    \"\"\"\n",
     "    try:\n",
     "        max_reasonable_length = 1_000_000\n",
@@ -341,14 +347,16 @@
     "    Maximal Marginal Relevance with token budget constraint.\n",
     "    \n",
     "    Args:\n",
-    "        doc_embeddings (np.ndarray): Document embeddings matrix (n_docs, embedding_dim)\n",
-    "        query_embedding (np.ndarray): Query embedding vector (embedding_dim,)\n",
+    "        doc_embeddings (np.ndarray): Document embeddings matrix of shape (n_docs, embedding_dim)\n",
+    "        query_embedding (np.ndarray): Query embedding vector of shape (embedding_dim,)\n",
     "        max_tokens (int): Maximum token budget for selected sentences\n",
-    "        chunked_sentences (list[tuple]): List of (text, tokens) tuples for each sentence\n",
-    "        lambda_param (float, optional): Relevance vs diversity trade-off (1.0=pure relevance, 0.0=pure diversity)\n",
+    "        chunked_sentences (list[tuple]): List of (text, token_list) tuples where \n",
+    "            text is the sentence string and token_list is the tokenized representation\n",
+    "        lambda_param (float): Relevance vs diversity trade-off parameter. \n",
+    "            1.0 = pure relevance, 0.0 = pure diversity. Defaults to 0.5.\n",
     "    \n",
     "    Returns:\n",
-    "        list[tuple]: Selected sentences as (text, tokens) tuples\n",
+    "        list[tuple]: Selected sentences as (text, token_list) tuples within token budget\n",
     "    \"\"\"\n",
     "    query_similarities = cosine_similarity(doc_embeddings, [query_embedding]).flatten()\n",
     "\n",
@@ -390,21 +398,31 @@
    "source": [
     "def tfidf_consolidation(text: str, model_name: str = 'sentence-transformers/all-MiniLM-L6-v2', output: str = 'text', pooling: str = 'max', max_tokens: int = None, mmr_lambda: float = 0.5) -> list:\n",
     "    \"\"\"\n",
-    "    Consolidate text by selecting most important sentences using TF-IDF scoring.\n",
+    "    Consolidate text by selecting most important sentences using TF-IDF and MMR.\n",
     "\n",
-    "    Uses TF-IDF to rank sentence importance with pooled document centroid for similarity comparison.\n",
-    "    Applies MMR (Maximal Marginal Relevance) to balance relevance and diversity in selection.\n",
+    "    Splits text into sentences, calculates TF-IDF vectors for each sentence, creates\n",
+    "    a document centroid using pooling, then applies Maximal Marginal Relevance (MMR)\n",
+    "    to select sentences that balance relevance to the document centroid with diversity.\n",
     "    \n",
     "    Args:\n",
     "        text (str): Input text to consolidate\n",
-    "        model_name (str): HuggingFace model name used to determine token limits and tokenization\n",
-    "        output (str): Output format - 'tokens' or 'text'\n",
-    "        pooling (str): Pooling method for document centroid - 'max' (peak TF-IDF scores) or 'sum' (cumulative scores)\n",
-    "        max_tokens (int, optional): Maximum tokens in output. If None, uses model's max length\n",
-    "        mmr_lambda (float, optional): MMR lambda parameter for relevance vs diversity trade-off\n",
+    "        model_name (str): HuggingFace model name used to determine token limits and \n",
+    "            tokenization. Defaults to 'sentence-transformers/all-MiniLM-L6-v2'.\n",
+    "        output (str): Output format - 'tokens' returns token lists, 'text' returns \n",
+    "            strings. Defaults to 'text'.\n",
+    "        pooling (str): Pooling method for document centroid - 'max' (element-wise \n",
+    "            maximum) or 'sum' (element-wise sum). Defaults to 'max'.\n",
+    "        max_tokens (int | None): Maximum tokens in output. If None, uses model's \n",
+    "            maximum length. Defaults to None.\n",
+    "        mmr_lambda (float): MMR relevance vs diversity trade-off parameter \n",
+    "            (1.0=pure relevance, 0.0=pure diversity). Defaults to 0.5.\n",
     "       \n",
     "    Returns:\n",
-    "        list: Selected sentences as tokens (list of lists) or text (list of strings)\n",
+    "        list[list[int]] | list[str]: Selected sentences as token lists or text strings \n",
+    "            based on output parameter\n",
+    "            \n",
+    "    Raises:\n",
+    "        ValueError: If no sentences found in input text\n",
     "    \"\"\"\n",
     "    # Initialize tokenizer from model name\n",
     "    tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
@@ -504,26 +522,35 @@
     "                               max_tokens: int = None,\n",
     "                              mmr_lambda: float = 0.5) -> list:\n",
     "    \"\"\"\n",
-    "    Consolidate text by selecting sentences most similar to document centroid using embeddings.\n",
+    "    Consolidate text by selecting sentences using embeddings and MMR algorithm.\n",
     "\n",
-    "    Embeds all sentences for selection, then computes document centroid using specified \n",
-    "    chunking method and pooling strategy. Ranks sentences by cosine similarity to centroid \n",
-    "    and returns most similar sentences up to token limit.\n",
+    "    Embeds all sentences, computes a document centroid using specified chunking method \n",
+    "    and pooling strategy, then applies Maximal Marginal Relevance (MMR) to select \n",
+    "    sentences that balance similarity to the centroid with diversity among selections.\n",
     "    \n",
     "    Args:\n",
     "        text (str): Input text to consolidate\n",
-    "        pooling (str): Pooling method for document centroid - 'mean', 'len_weighted', or 'semantic_centrality'\n",
-    "        model_name (str): SentenceTransformer model name for embeddings\n",
-    "        output (str): Output format - 'tokens' or 'text'\n",
+    "        pooling (str): Pooling method for document centroid. Options: 'mean' (implemented), \n",
+    "            'len_weighted', 'semantic_centrality' (not implemented). Defaults to 'mean'.\n",
+    "        model_name (str): SentenceTransformer model name for embeddings. \n",
+    "            Defaults to 'sentence-transformers/all-MiniLM-L6-v2'.\n",
+    "        output (str): Output format - 'tokens' returns token lists, 'text' returns \n",
+    "            strings. Defaults to 'text'.\n",
     "        chunking_method (str): Method for computing document centroid:\n",
     "            - 'sentence': Use sentence embeddings for centroid calculation\n",
     "            - 'chunks': Use fixed-size chunk embeddings for centroid calculation\n",
-    "        max_tokens (int, optional): Maximum tokens in output. If None, uses model's max length\n",
-    "        mmr_lambda (float, optional): MMR lambda parameter for relevance vs diversity trade-off\n",
+    "            Defaults to 'sentence'.\n",
+    "        max_tokens (int | None): Maximum tokens in output. If None, uses model's \n",
+    "            maximum length. Defaults to None.\n",
+    "        mmr_lambda (float): MMR relevance vs diversity trade-off parameter \n",
+    "            (1.0=pure relevance, 0.0=pure diversity). Defaults to 0.5.\n",
     "       \n",
     "    Returns:\n",
-    "        list: Selected sentences as tokens (list of lists) or text (list of strings),\n",
-    "              ordered by similarity score (highest first)\n",
+    "        list[list[int]] | list[str]: Selected sentences as token lists or text strings \n",
+    "            based on output parameter, ordered by MMR selection algorithm\n",
+    "            \n",
+    "    Raises:\n",
+    "        ValueError: If no sentences found in input text\n",
     "    \"\"\"\n",
     "    # Initialize embedder\n",
     "    embedder = SentenceTransformer(model_name)\n",
@@ -607,16 +634,23 @@
     "    \"\"\"\n",
     "    Consolidate text using iterative summarization until target size is reached.\n",
     "\n",
-    "    Iteratively chunks and summarizes text until the result fits within the target size.\n",
-    "    Each iteration reduces text length by summarizing chunks, then re-chunking if needed.\n",
+    "    Chunks the input text and summarizes each chunk, then iteratively re-chunks \n",
+    "    and re-summarizes the combined summaries until the result fits within the \n",
+    "    target token limit. Uses a chunk ratio of 0.5 times the model's token limit \n",
+    "    for processing chunks.\n",
     "    \n",
     "    Args:\n",
     "        text (str): Input text to consolidate\n",
-    "        model (str): HuggingFace summarization model name\n",
-    "        summary_size (int, optional): Target summary size in tokens. If None, uses model's max length\n",
+    "        model (str): HuggingFace summarization model name. \n",
+    "            Defaults to 'facebook/bart-large-cnn'.\n",
+    "        chunking_method (str): Method for chunking text. Options: 'fixed_size' \n",
+    "            (implemented), 'paragraph', 'semantic' (may not be implemented). \n",
+    "            Defaults to 'fixed_size'.\n",
+    "        summary_size (int | None): Target summary size in tokens. If None, \n",
+    "            uses model's maximum length. Defaults to None.\n",
     "       \n",
     "    Returns:\n",
-    "        str: Consolidated summary text\n",
+    "        str: Consolidated summary text within the target token limit\n",
     "    \"\"\"\n",
     "    summarizer = pipeline('summarization', model=model)\n",
     "    tokenizer = AutoTokenizer.from_pretrained(model)\n",
