Use TF-IDF to find top words per testament

--- a/bible_summary.ipynb
+++ b/bible_summary.ipynb
@@ -67,10 +67,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "2dcc4fe0-1757-46e1-9d5d-85b1d0025569",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\MyStuff\\Applications\\Productivity\\Programming\\Python\\jupyter-env-313\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import ebooklib\n",
@@ -819,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "e72d4de0-17db-45ac-ab2a-a0b1a23e5800",
    "metadata": {},
    "outputs": [],
@@ -840,7 +849,9 @@
     "\n",
     "all_books = old_testament_books + new_testament_books\n",
     "\n",
-    "bible_text = '\\n'.join(get_book_text(book, bible) for book in all_books)"
+    "bible_text = '\\n'.join(get_book_text(book, bible) for book in all_books)\n",
+    "old_testament = '\\n'.join(get_book_text(book, bible) for book in old_testament_books)\n",
+    "new_testament = '\\n'.join(get_book_text(book, bible) for book in new_testament_books)"
    ]
   },
   {
@@ -931,6 +942,66 @@
    ],
    "source": [
     "summarization_pipeline_consolidation(bible_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d65e1f89-6d34-48b9-b23b-136f53dfe88b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\MyStuff\\Applications\\Productivity\\Programming\\Python\\jupyter-env-313\\Lib\\site-packages\\sklearn\\feature_extraction\\text.py:402: UserWarning: Your stop_words may be inconsistent with your preprocessing. Tokenizing the stop words generated tokens ['articl', 'mon'] not in stop_words.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Old Testament:\n",
+      "  lord: 0.6175\n",
+      "  god: 0.2644\n",
+      "  israel: 0.2132\n",
+      "  king: 0.2090\n",
+      "  son: 0.1681\n",
+      "\n",
+      "New Testament:\n",
+      "  jesus: 0.4256\n",
+      "  god: 0.4227\n",
+      "  man: 0.2797\n",
+      "  christ: 0.2472\n",
+      "  things: 0.2246\n"
+     ]
+    }
+   ],
+   "source": [
+    "# from https://gist.github.com/sebleier/554280?permalink_comment_id=3813988#gistcomment-3813988 \n",
+    "# english stopwords list wasn't cutting it for KJV\n",
+    "stopwords_list = requests.get(\"https://gist.githubusercontent.com/rg089/35e00abf8941d72d419224cfd5b5925d/raw/12d899b70156fd0041fa9778d657330b024b959c/stopwords.txt\").content\n",
+    "stopwords = list(set(stopwords_list.decode().splitlines())) + ['thy', 'thee', 'thine', 'shalt', 'ye', 'hath', 'hast', 'saith', 'doeth', 'art']\n",
+    "\n",
+    "vectorizer = TfidfVectorizer(ngram_range=(1, 3), stop_words=stopwords)\n",
+    "    \n",
+    "testament_vectors = vectorizer.fit_transform([old_testament, new_testament])\n",
+    "feature_names = vectorizer.get_feature_names_out()\n",
+    "\n",
+    "# Find top 5 words for each book\n",
+    "for i, testament in enumerate(['Old Testament', 'New Testament']):\n",
+    "    # TF-IDF scores for current book\n",
+    "    testament_tfidf = testament_vectors[i].toarray().flatten()    \n",
+    "    # Indices of top 5 scores\n",
+    "    top_indices = testament_tfidf.argsort()[-5:][::-1]    \n",
+    "    # Words and their scores\n",
+    "    top_words = [(feature_names[idx], testament_tfidf[idx]) for idx in top_indices]\n",
+    "    \n",
+    "    print(f\"\\n{testament}:\")\n",
+    "    for word, score in top_words:\n",
+    "        print(f\"  {word}: {score:.4f}\")"
    ]
   },
   {
@@ -1447,16 +1518,6 @@
    "metadata": {},
    "source": [
     "## Full Old Testament"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "500cb9cb-aee4-408a-9d71-f94c8b372ed9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "old_testament = '\\n'.join(get_book_text(book, bible) for book in old_testament_books)"
    ]
   },
   {
@@ -5219,16 +5280,6 @@
    "metadata": {},
    "source": [
     "## Full New Testament"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "id": "81f57a68-0c16-4c4f-8b22-cf14be813b08",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_testament = '\\n'.join(get_book_text(book, bible) for book in new_testament_books)"
    ]
   },
   {
