Added to overview

--- a/bible_summary.ipynb
+++ b/bible_summary.ipynb
@@ -5,7 +5,7 @@
    "id": "ee689ef3-e4d5-476f-a59c-77fa77d1ae20",
    "metadata": {},
    "source": [
-    "This notebook shows the effects of using the long-form text consolidation and summarization functions I made in the consolidation-comparison.ipynb notebook on the Bible. I've included the description of those techniques below for the sake of completeness. I did this purely out of curiosity; this is not meant to serve as any form of conclusive analysis.\n",
+    "This notebook shows the effects of using the long-form text consolidation and summarization functions I made in the consolidation-comparison.ipynb notebook on the Bible. I ran them on the whole Bible, the New Testament, the Old Testament, and each book. I've included the description of those techniques below for the sake of completeness. I did this purely out of curiosity; this is not meant to serve as any form of conclusive analysis.\n",
     "\n",
     "# Methods\n",
     "\n",
@@ -44,7 +44,8 @@
     "NB: `summarization_pipeline_consolidation()` contains options for paragraph chunking and semantic chunking, which aren't implemented in this notebook. Where `semantic_chunking()` is implemnented, it uses LangChain's SemanticChunker (`from langchain_experimental.text_splitter import SemanticChunker`). \n",
     "\n",
     "# Observations\n",
-    "I haven't read through all the text in this notebook, but here are some of my more immediate observations.\n",
+    "\n",
+    "There's a lot of text in this notebook, so I haven't read through all of it yet, but here are some of my more immediate observations.\n",
     "\n",
     "- TF-IDF consolidation with max pooling produced identical results for the whole Bible and the Old Testament.\n",
     "- Transformers consolidation with chunk pooling produced very similar results for the whole Bible and the Old Testament. The only difference was a single sentence, \"And Araunah said unto David, Let my lord the king take and offer up what seemeth good unto him: behold, here be oxen for burnt sacrifice, and threshing instruments and other instruments of the oxen for wood,\" which is present in the consolidation for the whole Bible but not the Old Testament.\n",
@@ -54,7 +55,9 @@
     "\n",
     "Part of the inspiration for this project was curiosity about what would happen if I tried to condense the Bible into a single, discourse coherent paragraph. However, the summarization pipeline results overall seem too noisy to be usable in any meaningful way. They're better for the individual books, espeically the shorter ones, but not for the full testaments and the whole Bible. Iteratively summarizing text like I did opens up too many opportunities for artifacts to appear, which they certainly did. I'm sure I'd get usable results if I used one of the big LLMs (ChatGPT, Claude, etc.) or did some careful model selection and parameter tuning. \n",
     "\n",
-    "I first tried to use the pegasus-x-large model because it produced such good results in the consolidation_comparison.ipynb notebook before it devolved into repetition. I thought that, with some parameter tuning, it could give me what I was hoping for. However, running it locally on the entire Bible proved too resource intensive (i.e. it was taking too long and I got impatient), so I opted for sshleifer/distilbart-cnn-12-6, which produced sufficiently passable results in the other notebook."
+    "I first tried to use the pegasus-x-large model because it produced such good results in the consolidation_comparison.ipynb notebook before it devolved into repetition. I thought that, with some parameter tuning, it could give me what I was hoping for. However, running it locally on the entire Bible proved too resource intensive (i.e. it was taking too long and I got impatient), so I opted for sshleifer/distilbart-cnn-12-6, which produced sufficiently passable results in the other notebook.\n",
+    "\n",
+    "One thing to keep in mind with these results is that, due to the nature of NLP, these results are semantically important, but not necessarily theologically important. Studying the overlap between semantic and theological importance could be an an interesting project for later."
    ]
   },
   {
@@ -8019,14 +8022,6 @@
    "source": [
     "summarization_pipeline_consolidation(revelation)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "53836217-54f7-4923-a181-3bba02a14c24",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
