--- a/consolidation_comparison.ipynb
+++ b/consolidation_comparison.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "## TF-IDF\n",
     "\n",
-    "Term frequency-inverse document frequency gives high weights to words that are present in a given document (term frequency), but rare across the entire corpus (inverse document frequency). I wanted to explore the utility of using this techinque for consolidating long texts. I used the follow process:\n",
+    "Term frequency-inverse document frequency gives high weights to words that are present in a given document (term frequency), but rare across the entire corpus (inverse document frequency). I wanted to explore the utility of using this technique for consolidating long texts. I used the follow process:\n",
     "\n",
     "1. Turn text into a list of sentences.\n",
     "2. Create the sparse TF-IDF matrix from these sentences. Each sentence is a document, and the full collection of sentences is the corpus.\n",
